# ChangeLog for media-libs/musicbrainz
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.47 2005/07/02 00:13:46 hardave Exp $

  02 Jul 2005; Hardave Riar <hardave@gentoo.org> musicbrainz-2.1.1.ebuild:
  Stable on mips

*musicbrainz-2.1.1-r1 (27 Apr 2005)

  27 Apr 2005; Diego Pettenò <flameeyes@gentoo.org>
  +files/musicbrainz-2.1.1-gcc4.patch, +musicbrainz-2.1.1-r1.ebuild:
  Added patch to compile with gcc 4.0, fixes #90478. Revision bump because the
  previous was stable and this can change the behaviour on 64-bit systems.

  22 Feb 2005; Hardave Riar <hardave@gentoo.org> musicbrainz-2.1.1.ebuild:
  Marked ~mips

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  18 Dec 2004; Markus Rothe <corsair@gentoo.org> musicbrainz-2.1.1.ebuild:
  Stable on ppc64

  14 Sep 2004; Jeremy Huddleston <eradicator@gentoo.org>
  -files/musicbrainz-2.0.2.patch, -musicbrainz-2.0.2-r2.ebuild:
  Removing old version.

  02 Sep 2004; Tom Gall <tgall@gentoo.org> musicbrainz-2.1.1.ebuild:
  added ~ppc64, bug #62682

  29 Aug 2004; Jeremy Huddleston <eradicator@gentoo.org>
  musicbrainz-2.1.1.ebuild, +files/musicbrainz-2.1.1-gcc2.patch:
  Fix non-ANSI C which will cause gcc2 to die.  Closes bug #61568.

  07 Aug 2004; <agriffis@gentoo.org> musicbrainz-2.1.1.ebuild:
  stable on ia64 #54287

  07 Aug 2004; Bryan Østergaard <kloeri@gentoo.org> musicbrainz-2.1.1.ebuild:
  Stable on alpha.

  01 Jul 2004; Aron Griffis <agriffis@gentoo.org> musicbrainz-2.0.2-r2.ebuild,
  musicbrainz-2.1.1.ebuild:
  add ia64 keywords

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  musicbrainz-2.0.2-r2.ebuild:
  virtual/glibc -> virtual/libc

  29 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
  musicbrainz-2.1.1.ebuild:
  Stable x86 and sparc.

  28 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
  -musicbrainz-2.0.1.ebuild: