@@ -1,8 +1,30 @@
 MD5 d66d08c84e1fe88efdaa2794b0002a5a ChangeLog 6499
-MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
-MD5 a727bb3d5fb70406718d0aca55903254 musicbrainz-2.1.1-r1.ebuild 1444
-MD5 48953e90281ee4a402bc7e824ad7782e musicbrainz-2.1.1.ebuild 1403
+RMD160 349b136abda4da31b99f67481e186a8c6d12a8a6 ChangeLog 6499
+SHA256 217d3957962cd598b872419fe82dbadb12a2c0e939a8253956fe5397f6185c00 ChangeLog 6499
 MD5 0b5843a63c6212b3a427b45939e1e2ae files/digest-musicbrainz-2.1.1 72
+RMD160 a810188f8645edb5597eb067c8203c76cce3dce9 files/digest-musicbrainz-2.1.1 72
+SHA256 fa17787fcd25025e8bea20b05dc7e93d23e8e4b4f6a21bd5538cdbebbed06c2b files/digest-musicbrainz-2.1.1 72
 MD5 0b5843a63c6212b3a427b45939e1e2ae files/digest-musicbrainz-2.1.1-r1 72
+RMD160 a810188f8645edb5597eb067c8203c76cce3dce9 files/digest-musicbrainz-2.1.1-r1 72
+SHA256 fa17787fcd25025e8bea20b05dc7e93d23e8e4b4f6a21bd5538cdbebbed06c2b files/digest-musicbrainz-2.1.1-r1 72
+MD5 5cb302efcb865dbe70164a9ab3331aee files/digest-musicbrainz-2.1.2 262
+RMD160 9372cadf6631ca1c055317d44f10e3c60fe96ba5 files/digest-musicbrainz-2.1.2 262
+SHA256 d0528d911de82df5484df13a42918ba7d17a15a901475eb0750839e490093c0a files/digest-musicbrainz-2.1.2 262
 MD5 77f2ae9381e5795af632a134e2211c8a files/musicbrainz-2.1.1-gcc2.patch 811
+RMD160 6b54345498ab0f9797b2b03cc6b5039612a12a27 files/musicbrainz-2.1.1-gcc2.patch 811
+SHA256 c8dbe42d279e946e4b8815e4f15127d307b5f914465bcf1498e21e448055b73b files/musicbrainz-2.1.1-gcc2.patch 811
 MD5 150b39ef2a38f6569e7439f0d135826f files/musicbrainz-2.1.1-gcc4.patch 670
+RMD160 ad10ed8426506dbcfefb2a342b512f22fed2af93 files/musicbrainz-2.1.1-gcc4.patch 670
+SHA256 9ae52cc670f7cc769408630ff197cab8d8b8c19f65604f63e41a3cd22a5ba2e2 files/musicbrainz-2.1.1-gcc4.patch 670
+MD5 a1eaeb2ae801daeb712c90c060e922dc metadata.xml 158
+RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e metadata.xml 158
+SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b metadata.xml 158
+MD5 a727bb3d5fb70406718d0aca55903254 musicbrainz-2.1.1-r1.ebuild 1444
+RMD160 a552a6f373ef2c6c1caf0da77a10c75120b699f8 musicbrainz-2.1.1-r1.ebuild 1444
+SHA256 da9bd2abb701c8223f5ac02b5b4fb46f45c380522057038de1a5af3d14200654 musicbrainz-2.1.1-r1.ebuild 1444
+MD5 48953e90281ee4a402bc7e824ad7782e musicbrainz-2.1.1.ebuild 1403
+RMD160 f2e26767ee8d424583032bd5589bd4981dd4299b musicbrainz-2.1.1.ebuild 1403
+SHA256 0a88db8733e9c0e322a89ac57d252ba9e36d027b3b1a2dc00f2e47e8ea2a3956 musicbrainz-2.1.1.ebuild 1403
+MD5 0e2032584e098d69e3394b2f65b8287d musicbrainz-2.1.2.ebuild 842
+RMD160 15334ffc0b6a33bf22a4639d1c4a80e41b22ba5c musicbrainz-2.1.2.ebuild 842
+SHA256 d0eab403bec3742c11a3711fe99538cc1ce0e0de4bd89e28c9ab47b77e757447 musicbrainz-2.1.2.ebuild 842
