@@ -1,0 +1,3 @@
+MD5 88d35af903665fecbdee77eb6d5e6cdd libmusicbrainz-2.1.2.tar.gz 504432
+RMD160 d1a243b42a6092b6fbf0c3e543bed9c8a403e9b7 libmusicbrainz-2.1.2.tar.gz 504432
+SHA256 f40f0318e8c8f7eee802de91ee8a9b5673c0f28a15527883bd20826e74dff54c libmusicbrainz-2.1.2.tar.gz 504432
