@@ -1,0 +1,30 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/musicbrainz/Attic/musicbrainz-2.1.2.ebuild,v 1.1 2006/02/13 22:34:36 metalgod Exp $
+
+IUSE=""
+DESCRIPTION="Client library to access metadata of mp3/vorbis/CD media"
+HOMEPAGE="http://www.musicbrainz.org/"
+SRC_URI="http://ftp.musicbrainz.org/pub/musicbrainz/lib${P}.tar.gz"
+
+LICENSE="LGPL-2.1"
+SLOT="1"
+KEYWORDS="~x86 ~ppc ~sparc ~hppa ~alpha ~amd64 ~ia64 ~ppc64 ~mips"
+
+RDEPEND="dev-libs/expat"
+
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig"
+
+S=${WORKDIR}/lib${P}
+
+src_compile() {
+	econf --enable-cpp-headers || die "configure failed"
+	emake || die "emake failed"
+}
+
+src_install() {
+	make DESTDIR="${D}" install || die "make install failed"
+
+	dodoc AUTHORS ChangeLog README TODO docs/mb_howto.txt
+}
